--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,24 +9,14 @@
             "request": "launch",
             "name": "vuejs: chrome",
             "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/src",
+            "webRoot": "${workspaceFolder}",
             "breakOnLoad": true,
+            "sourceMaps": true,
             "sourceMapPathOverrides": {
-                "webpack:///src/*": "${webRoot}/*"
+                "webpack:///./src/*": "${webRoot}/src/*",
+                "webpack:///./dev/*": "${webRoot}/dev/*",
+                "webpack:///../node_modules/*": "${webRoot}/node_modules/*"
             }
         },
-        {
-            "type": "firefox",
-            "request": "launch",
-            "name": "vuejs: firefox",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/src",
-            "pathMappings": [
-                {
-                    "url": "webpack:///src/",
-                    "path": "${webRoot}/"
-                }
-            ]
-        }
     ]
 }
