resolve schema before handing it to jsonform - this fixes issue where reactive control variable is updated in endless loop for huge example, fix monaco json schema validation

--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "vuetify.css"
   ],
   "dependencies": {
-    "monaco-editor": "^0.26.0",
-    "dayjs": "^1.10.6",
-    "lodash": "^4.17.15",
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@jsonforms/core": "^3.0.0-alpha.1",
     "@jsonforms/vue2": "^3.0.0-alpha.1",
     "@mdi/font": "^5.9.55",
     "ajv-errors": "^1.0.1",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.15",
+    "monaco-editor": "^0.26.0",
     "vue": "^2.6.14",
     "vuetify": "^2.4.0"
   },
@@ -62,16 +63,24 @@
     "@types/ajv-errors": "^1.0.1",
     "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.172",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/composition-api": "^1.0.0-rc.3",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "cp-cli": "^2.0.0",
     "cross-env": "^7.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^6.2.2",
     "monaco-editor-webpack-plugin": "^4.1.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
@@ -85,22 +94,15 @@
     "typescript": "3.8.3",
     "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^2.2.1"    
+    "vuetify-loader": "^1.7.0"
   },
   "peerDependencies": {
-    "monaco-editor": "^0.26.0",
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@jsonforms/core": "^3.0.0-alpha.1",
     "@jsonforms/vue2": "^3.0.0-alpha.1",
     "@mdi/font": "^5.9.55",
     "ajv-errors": "^1.0.1",
+    "monaco-editor": "^0.26.0",
     "vue": "^2.6.14",
     "vuetify": "^2.4.0"
   }
