--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "vuetify.css"
   ],
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@jsonforms/core": "^3.0.0-alpha.1",
     "@jsonforms/vue2": "^3.0.0-alpha.1",
     "@mdi/font": "^5.9.55",
     "ajv-errors": "^1.0.1",
     "dayjs": "^1.10.6",
+    "json-refs": "^3.0.15",
     "lodash": "^4.17.15",
     "monaco-editor": "^0.26.0",
     "vue": "^2.6.14",
@@ -87,8 +87,10 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.29.0",
     "rollup-plugin-vue": "^5.1.9",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^10.2.0",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "symlink-dir": "^5.0.0",
     "typedoc": "^0.19.2",
     "typescript": "3.8.3",
@@ -97,7 +99,7 @@
     "vuetify-loader": "^1.7.0"
   },
   "peerDependencies": {
-    "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "json-refs": "^3.0.15",
     "@jsonforms/core": "^3.0.0-alpha.1",
     "@jsonforms/vue2": "^3.0.0-alpha.1",
     "@mdi/font": "^5.9.55",
